[gd_scene load_steps=11 format=3 uid="uid://6b0esr54xxld"]

[ext_resource type="Theme" uid="uid://cimcgg33xdiyd" path="res://Themes/main.theme" id="1_0a8xw"]
[ext_resource type="Texture2D" uid="uid://dvs0ggivl0sag" path="res://Icons/bg.png" id="2_cxtwh"]
[ext_resource type="Texture2D" uid="uid://dsuh3qll5d6jp" path="res://Icons/Controls/home.png" id="3_nwdeu"]
[ext_resource type="Script" path="res://Menus/level_menu.gd" id="3_uyvg3"]
[ext_resource type="Script" path="res://Menus/home_button.gd" id="4_4v1t0"]
[ext_resource type="Texture2D" uid="uid://dy2qsu8wl6r8g" path="res://Icons/Controls/transparentLight10.png" id="5_gfs62"]
[ext_resource type="StyleBox" uid="uid://ev2mbtfnm0jq" path="res://Themes/Styleboxes/default.stylebox" id="6_ggh0h"]
[ext_resource type="Script" path="res://addons/GameGUI/GGFiller.gd" id="7_c8wqi"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_16a4w"]
texture = ExtResource("2_cxtwh")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_oa12d"]
texture = ExtResource("5_gfs62")
texture_margin_left = 4.0
texture_margin_top = 5.0
texture_margin_right = 7.0
texture_margin_bottom = 5.0

[node name="LevelMenu" type="Panel"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_0a8xw")
theme_override_styles/panel = SubResource("StyleBoxTexture_16a4w")
script = ExtResource("3_uyvg3")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="Home" type="Button" parent="MarginContainer"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
icon = ExtResource("3_nwdeu")
script = ExtResource("4_4v1t0")

[node name="Label" type="Label" parent="MarginContainer"]
custom_minimum_size = Vector2(0, 60)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 0
text = "Level Selection"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ScrollContainer" type="ScrollContainer" parent="."]
custom_minimum_size = Vector2(500, 850)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -259.0
offset_top = -380.0
offset_right = 260.0
offset_bottom = 470.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_oa12d")
horizontal_scroll_mode = 0
vertical_scroll_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="ScrollContainer"]
custom_minimum_size = Vector2(500, 840)
layout_mode = 2
theme_override_constants/separation = 10

[node name="Flood" type="Label" parent="ScrollContainer/VBoxContainer"]
layout_mode = 2
text = "Flood"
horizontal_alignment = 1
vertical_alignment = 1

[node name="FloodLevels" type="VBoxContainer" parent="ScrollContainer/VBoxContainer"]
custom_minimum_size = Vector2(480, 0)
layout_mode = 2
size_flags_horizontal = 4
theme_override_constants/separation = 30

[node name="PrepareButton" type="Button" parent="ScrollContainer/VBoxContainer/FloodLevels"]
layout_mode = 2
theme_override_font_sizes/font_size = 30
theme_override_styles/normal = ExtResource("6_ggh0h")
toggle_mode = true
text = "Prepare"

[node name="Prepare" type="VBoxContainer" parent="ScrollContainer/VBoxContainer/FloodLevels"]
visible = false
layout_mode = 2
theme_override_constants/separation = 10

[node name="RichTextLabel" type="RichTextLabel" parent="ScrollContainer/VBoxContainer/FloodLevels/Prepare"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
bbcode_enabled = true
text = "Time: [b]3 minutes[/b]
Quests:
   1. [b]Collect 17 emergency kit items[/b]
   2. [b]Mitigate hazards and damages[/b]
   3. [b]Have emergency contacts[/b]
"
fit_content = true
scroll_active = false

[node name="GGFiller" type="Container" parent="ScrollContainer/VBoxContainer/FloodLevels/Prepare"]
custom_minimum_size = Vector2(0, 5)
layout_mode = 2
script = ExtResource("7_c8wqi")
parameters = {
"safe_area_bottom_margin": 0.0,
"safe_area_left_margin": 0.0,
"safe_area_right_margin": 0.0,
"safe_area_top_margin": 0.0
}

[node name="PlayPrepare" type="Button" parent="ScrollContainer/VBoxContainer/FloodLevels/Prepare"]
custom_minimum_size = Vector2(200, 50)
layout_mode = 2
size_flags_horizontal = 4
text = "Play"

[node name="RespondButton" type="Button" parent="ScrollContainer/VBoxContainer/FloodLevels"]
layout_mode = 2
theme_override_font_sizes/font_size = 30
theme_override_styles/normal = ExtResource("6_ggh0h")
toggle_mode = true
text = "Respond"

[node name="Respond" type="VBoxContainer" parent="ScrollContainer/VBoxContainer/FloodLevels"]
visible = false
layout_mode = 2
theme_override_constants/separation = 10

[node name="RichTextLabel" type="RichTextLabel" parent="ScrollContainer/VBoxContainer/FloodLevels/Respond"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
bbcode_enabled = true
text = "Time: [b]1 minute[/b]
Quests:
   1. [b]Evacuate to evacuation center[/b]"
fit_content = true
scroll_active = false

[node name="GGFiller" type="Container" parent="ScrollContainer/VBoxContainer/FloodLevels/Respond"]
custom_minimum_size = Vector2(0, 5)
layout_mode = 2
script = ExtResource("7_c8wqi")
parameters = {
"safe_area_bottom_margin": 0.0,
"safe_area_left_margin": 0.0,
"safe_area_right_margin": 0.0,
"safe_area_top_margin": 0.0
}

[node name="PlayRespond" type="Button" parent="ScrollContainer/VBoxContainer/FloodLevels/Respond"]
custom_minimum_size = Vector2(200, 50)
layout_mode = 2
size_flags_horizontal = 4
text = "Play"

[node name="RecoverButton" type="Button" parent="ScrollContainer/VBoxContainer/FloodLevels"]
layout_mode = 2
theme_override_font_sizes/font_size = 30
theme_override_styles/normal = ExtResource("6_ggh0h")
toggle_mode = true
text = "Recover"

[node name="Recover" type="VBoxContainer" parent="ScrollContainer/VBoxContainer/FloodLevels"]
visible = false
layout_mode = 2
theme_override_constants/separation = 10

[node name="RichTextLabel" type="RichTextLabel" parent="ScrollContainer/VBoxContainer/FloodLevels/Recover"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
bbcode_enabled = true
text = "Time: [b]3 minutes[/b]
Quests:
   1. [b]Assess health and injuries[/b]
   2. [b]Identify property damages[/b]
   3. [b]Plan for the future[/b]"
fit_content = true
scroll_active = false

[node name="GGFiller" type="Container" parent="ScrollContainer/VBoxContainer/FloodLevels/Recover"]
custom_minimum_size = Vector2(0, 5)
layout_mode = 2
script = ExtResource("7_c8wqi")
parameters = {
"safe_area_bottom_margin": 0.0,
"safe_area_left_margin": 0.0,
"safe_area_right_margin": 0.0,
"safe_area_top_margin": 0.0
}

[node name="PlayRecover" type="Button" parent="ScrollContainer/VBoxContainer/FloodLevels/Recover"]
custom_minimum_size = Vector2(200, 50)
layout_mode = 2
size_flags_horizontal = 4
text = "Play"

[connection signal="pressed" from="MarginContainer/Home" to="MarginContainer/Home" method="_on_pressed"]
[connection signal="toggled" from="ScrollContainer/VBoxContainer/FloodLevels/PrepareButton" to="." method="_on_prepare_button_toggled"]
[connection signal="pressed" from="ScrollContainer/VBoxContainer/FloodLevels/Prepare/PlayPrepare" to="." method="_on_play_prepare_pressed"]
[connection signal="toggled" from="ScrollContainer/VBoxContainer/FloodLevels/RespondButton" to="." method="_on_respond_button_toggled"]
[connection signal="pressed" from="ScrollContainer/VBoxContainer/FloodLevels/Respond/PlayRespond" to="." method="_on_play_respond_pressed"]
[connection signal="toggled" from="ScrollContainer/VBoxContainer/FloodLevels/RecoverButton" to="." method="_on_recover_button_toggled"]
[connection signal="pressed" from="ScrollContainer/VBoxContainer/FloodLevels/Recover/PlayRecover" to="." method="_on_play_recover_pressed"]
